@@ -265,6 +265,9 @@ Unreleased changes (1.0-dev)
 97. NUTCH-639 - Change LuceneDocumentWrapper visibility from
     private to _public_ (Guillaume Smet via dogacan)
 
+98. NUTCH-651 - Remove bin/{start|stop}-balancer.sh from svn
+    tracking. (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
